--- a/index.html
+++ b/index.html
@@ -10,25 +10,50 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        main {
+            flex: 1;
         }
         header {
             background-color: #f4f4f4;
             padding: 20px;
             text-align: center;
         }
-        header img {
+        .header-row {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 10px;
+            flex-wrap: wrap; /* Allow wrapping to multiple rows */
+        }
+        header img.profile-pic {
             border-radius: 50%;
             width: 150px;
             height: 150px;
+            margin-right: 20px;
         }
-        header p {
+        header .info {
+            text-align: left;
+        }
+        header .info p {
+            margin: 5px 0;
+        }
+        header .bio {
             font-size: 1.2em;
             margin: 10px 0;
+            padding: 0 50px; /* Add padding left and right */
         }
         header a {
-            margin: 0 10px;
-            text-decoration: none;
             color: #333;
+        }
+        header .info img {
+            height: 20px; /* Set a uniform height for all shields */
+        }
+        header .header-row a {
+            padding: 0 2px; /* Add lateral padding */
         }
         section {
             padding: 20px;
@@ -42,11 +67,24 @@
             width: 100px;
             height: 100px;
             margin-right: 20px;
+            border-radius: 10px; /* Rounded corners */
+            border: 2px solid #333; /* Boundary of a couple of pixels */
         }
         .paper a {
-            margin-right: 10px;
-            text-decoration: none;
             color: #333;
+        }
+        .paper p {
+            margin: 5px 0; /* Reduce the distance between rows */
+        }
+        footer {
+            background-color: #f4f4f4;
+            text-align: center;
+            padding: 10px;
+            margin-top: auto; /* Ensure footer is at the bottom */
+        }
+        footer img {
+            vertical-align: middle;
+            height: 20px;
         }
     </style>
 </head>
@@ -54,35 +92,80 @@
 <body>
 
     <header>
-        <img src="media/profile_pic.jpg" alt="Your Photo">
-        <p>
-            I am a PhD student at the University of Cagliari, specializing in computer graphics.
-            My current research focuses on volume maps, exploring innovative techniques and applications in this field.
-        </p>
-
-        <a href="https://scholar.google.com/citations?user=7J2SyuwAAAAJ&hl=it">Google Scholar</a>
-        <a href="https://github.com/federicheddu">GitHub</a>
-        <a href="https://twitter.com/federicheddu">Twitter</a>
-
+        <div class="header-row">
+            <img src="media/profile_pic.jpg" alt="Your Photo" class="profile-pic">
+            <div class="info">
+                <p><strong>Federico Meloni</strong></p>
+                <p>PhD Student in Computer Science</p>
+                <p><strong>University:</strong> Università degli Studi di Cagliari</p>
+                <p><strong>Research group: </strong><a href="https://cg3hci.dmi.unica.it/lab/">CG3HCI Lab.</a></p>
+                <p><strong>Email:</strong><a href="mailto:federico.meloni3@unica.it">federico.meloni3@unica.it</a></p>
+            </div>
+        </div>
+        <div class="bio">
+            <p>
+                I am a PhD student at the University of Cagliari, specializing in computer graphics.
+                My current research focuses on volume maps, exploring innovative techniques and applications in this field.
+            </p>
+        </div>
+        <div class="header-row">
+            <a href="https://scholar.google.com/citations?user=7J2SyuwAAAAJ&hl=it">
+                <img src="https://img.shields.io/badge/Google%20Scholar-4285F4?style=flat&logo=google-scholar&logoColor=white" alt="Google Scholar">
+            </a>
+            <a href="https://github.com/federicheddu">
+                <img src="https://img.shields.io/badge/GitHub-181717?style=flat&logo=github&logoColor=white" alt="GitHub">
+            </a>
+            <a href="https://twitter.com/federicheddu">
+                <img src="https://img.shields.io/badge/X%20%28Twitter%29-000000?style=flat&logo=x&logoColor=white" alt="X (Twitter)">
+            </a>
+            <a href="https://www.instagram.com/federicheddu">
+                <img src="https://img.shields.io/badge/Instagram-E4405F?style=flat&logo=instagram&logoColor=white" alt="Instagram">
+            </a>
+            <a href="https://open.spotify.com/user/federicheddu98">
+                <img src="https://img.shields.io/badge/Spotify-1DB954?style=flat&logo=spotify&logoColor=white" alt="Spotify">
+            </a>
+            <a href="https://steamcommunity.com/id/federicheddu">
+                <img src="https://img.shields.io/badge/Steam-000000?style=flat&logo=steam&logoColor=white" alt="Steam">
+            </a>
+            <a href="https://www.reddit.com/user/federicheddu">
+                <img src="https://img.shields.io/badge/Reddit-FF4500?style=flat&logo=reddit&logoColor=white" alt="Reddit">
+            </a>
+            <a href="https://www.linkedin.com/in/federicheddu">
+                <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=flat&logo=linkedin&logoColor=white" alt="LinkedIn">
+            </a>
+        </div>
     </header>
-
-    <section>
-        <h2>Research Papers</h2>
-        <div class="paper">
-            <img src="media/volume_mapping_comp.png" alt="Paper Thumbnail">
-            <div>
-                <a href="https://diglib.eg.org/server/api/core/bitstreams/b17146fe-0b6e-45ab-aee4-0e557161e9cd/content">To What Extent Are Existing Volume Mapping
-                    Algorithms Practically Useful?</a>
+    <main>
+        <section>
+            <h2>Research Papers</h2>
+            <div class="paper">
+                <img src="media/volume_mapping_comp.png" alt="Paper Thumbnail">
+                <div>
+                    <p><strong>To What Extent Are Existing Volume Mapping Algorithms Practically Useful?</strong></p>
+                    <p><em>F. Meloni, G. Cherchi, R. Scateni, M. Livesu</em></p>
+                    <p>
+                        [<a href="https://diglib.eg.org/server/api/core/bitstreams/b17146fe-0b6e-45ab-aee4-0e557161e9cd/content">Paper</a>]
+                        [<a href="https://github.com/VOLMAP/volmap.github.io/tree/main/rationals_io">Code 1</a> / <a href="https://github.com/VOLMAP/volmap.github.io/tree/main/volume_mapping_check">Code 2</a>]
+                        [<a href="https://volmap.github.io/">Results</a>]
+                    </p>
+                </div>
             </div>
-        </div>
 
-        <div class="paper">
-            <img src="media/tutorialkit.png" alt="Paper Thumbnail">
-            <div>
-                <a href="https://iris.unica.it/retrieve/4d8f582f-0e3a-4356-9a48-9c9202381a67/short-s0-02_compressed.pdf">AR TutorialKit: an Augmented Reality Toolkit to Create Tutorials</a>
+            <div class="paper">
+                <img src="media/tutorialkit.png" alt="Paper Thumbnail">
+                <div>
+                    <p><strong>AR TutorialKit: an Augmented Reality Toolkit to Create Tutorials</strong></p>
+                    <p><em>F. Meloni, A. Perniciano, G. Cerniglia, V. Frau, L.D. Spano</em></p>
+                    <p>
+                        [<a href="https://iris.unica.it/retrieve/4d8f582f-0e3a-4356-9a48-9c9202381a67/short-s0-02_compressed.pdf">Paper</a>]
+                    </p>
+                </div>
             </div>
-        </div>
-        
-    </section>
+            
+        </section>
+    </main>
+    <footer>
+        <p>This website was made by me with <img src="https://www.svgrepo.com/show/439915/heart-fill.svg" alt="love"> and <img src="https://simpleicons.org/icons/githubcopilot.svg" alt="Copilot"></p>
+    </footer>
 </body>
 </html>
