--- a/index.html
+++ b/index.html
@@ -63,6 +63,48 @@
     </header>
     <main>
         <section>
+            <h2>Education</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-logo">
+                        <img src="https://web.unica.it/UserFiles/File/Utenti/verdeoro/unica_800_black.png" alt="UniCA Logo">
+                        <div class="timeline-year">2023 - Present</div>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>PhD Student in Mathematics and Computer Science</h3>
+                        <p><span class="award">⌛</span><strong>In progress</strong></p>
+                        <p><span class="award">🛠️</span>Currently working on <i>Volume Maps</i></p>
+                        <p><span class="award">🏛️</span>Università degli Studi di Cagliari</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-logo">
+                        <img src="https://web.unica.it/UserFiles/File/Utenti/verdeoro/unica_800_black.png" alt="UniCA Logo">
+                        <div class="timeline-year">2020 - 2023</div>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>MSc in Computer Science</h3>
+                        <p><span class="award">🎓</span>110/110 cum laude</p>
+                        <p><span class="award">📜</span><i>Implementing Topological Sheet Operators in Hexahedral Meshes for the Cinolib Library</i></p>
+                        <p><span class="award">🏛️</span>Università degli Studi di Cagliari</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-logo">
+                        <img src="https://web.unica.it/UserFiles/File/Utenti/verdeoro/unica_800_black.png" alt="UniCA Logo">
+                        <div class="timeline-year">2017 - 2020</div>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>BSc in Computer Science</h3>
+                        <p><span class="award">🎓</span>110/110 cum laude</p>
+                        <p><span class="award">📜</span><i>Advancing Volumes: A Tetrahedral Mesh Generation Method</i></p>
+                        <p><span class="award">🏛️</span>Università degli Studi di Cagliari</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
             <h2>Research Papers</h2>
             <div class="paper">
                 <img src="media/volume_mapping_comp.png" alt="Paper Thumbnail">
