--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Federico Meloni (federicheddu)</title>
     <link rel="stylesheet" href="styles.css">
     <script>
         function toggleDarkMode() {
             document.body.classList.toggle('dark-mode');
         }
     </script>
+    <meta name="description" content="Federico Meloni's portfolio. PhD student in Computer Science specializing in computer graphics and volume maps.">
+    <meta name="keywords" content="Federico Meloni, PhD, Computer Science, Computer Graphics, Volume Maps, Research, Portfolio, Unica, University, Università, Cagliari">
+    <meta name="author" content="Federico Meloni">
 </head>
 
 <body>
