--- a/index.html
+++ b/index.html
@@ -34,30 +34,42 @@
             </p>
         </div>
         <div class="header-row">
-            <a href="https://scholar.google.com/citations?user=7J2SyuwAAAAJ&hl=it">
-                <img src="https://img.shields.io/badge/Google%20Scholar-4285F4?style=flat&logo=google-scholar&logoColor=white" alt="Google Scholar">
-            </a>
-            <a href="https://github.com/federicheddu">
-                <img src="https://img.shields.io/badge/GitHub-181717?style=flat&logo=github&logoColor=white" alt="GitHub">
-            </a>
-            <a href="https://twitter.com/federicheddu">
-                <img src="https://img.shields.io/badge/X%20%28Twitter%29-000000?style=flat&logo=x&logoColor=white" alt="X (Twitter)">
-            </a>
-            <a href="https://www.instagram.com/federicheddu">
-                <img src="https://img.shields.io/badge/Instagram-E4405F?style=flat&logo=instagram&logoColor=white" alt="Instagram">
-            </a>
-            <a href="https://open.spotify.com/user/federicheddu98">
-                <img src="https://img.shields.io/badge/Spotify-1DB954?style=flat&logo=spotify&logoColor=white" alt="Spotify">
-            </a>
-            <a href="https://steamcommunity.com/id/federicheddu">
-                <img src="https://img.shields.io/badge/Steam-000000?style=flat&logo=steam&logoColor=white" alt="Steam">
-            </a>
-            <a href="https://www.reddit.com/user/federicheddu">
-                <img src="https://img.shields.io/badge/Reddit-FF4500?style=flat&logo=reddit&logoColor=white" alt="Reddit">
-            </a>
-            <a href="https://www.linkedin.com/in/federicheddu">
-                <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=flat&logo=linkedin&logoColor=white" alt="LinkedIn">
-            </a>
+            <div class="header-cluster">
+                <div class="header-cluster-title">Work</div>
+                <div class="header-cluster-line"></div>
+                <a href="https://scholar.google.com/citations?user=7J2SyuwAAAAJ&hl=it">
+                    <img src="https://img.shields.io/badge/Google%20Scholar-4285F4?style=flat&logo=google-scholar&logoColor=white" alt="Google Scholar">
+                </a>
+                <a href="https://github.com/federicheddu">
+                    <img src="https://img.shields.io/badge/GitHub-181717?style=flat&logo=github&logoColor=white" alt="GitHub">
+                </a>
+                <a href="https://www.linkedin.com/in/federicheddu">
+                    <img src="https://img.shields.io/badge/LinkedIn-0077B5?style=flat&logo=linkedin&logoColor=white" alt="LinkedIn">
+                </a>
+            </div>
+            <div class="header-cluster">
+                <div class="header-cluster-title">Social</div>
+                <div class="header-cluster-line"></div>
+                <a href="https://twitter.com/federicheddu">
+                    <img src="https://img.shields.io/badge/X%20%28Twitter%29-000000?style=flat&logo=x&logoColor=white" alt="X (Twitter)">
+                </a>
+                <a href="https://www.instagram.com/federicheddu">
+                    <img src="https://img.shields.io/badge/Instagram-E4405F?style=flat&logo=instagram&logoColor=white" alt="Instagram">
+                </a>
+                <a href="https://www.reddit.com/user/federicheddu">
+                    <img src="https://img.shields.io/badge/Reddit-FF4500?style=flat&logo=reddit&logoColor=white" alt="Reddit">
+                </a>
+            </div>
+            <div class="header-cluster">
+                <div class="header-cluster-title">Other</div>
+                <div class="header-cluster-line"></div>
+                <a href="https://open.spotify.com/user/federicheddu98">
+                    <img src="https://img.shields.io/badge/Spotify-1DB954?style=flat&logo=spotify&logoColor=white" alt="Spotify">
+                </a>
+                <a href="https://steamcommunity.com/id/federicheddu">
+                    <img src="https://img.shields.io/badge/Steam-000000?style=flat&logo=steam&logoColor=white" alt="Steam">
+                </a>
+            </div>
         </div>
         <label class="switch">
             <input type="checkbox" onclick="toggleDarkMode()">
