--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             <input type="checkbox" onclick="toggleDarkMode()">
             <span class="slider"></span>
         </label>
+        <a href="places.html" class="globe-icon">
+            <img src="media/globe.svg" alt="Globe Icon">
+        </a>
     </header>
     <main>
         <section>
