--- a/places.html
+++ b/places.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Places Visited</title>
+    <title>Federicheddu's World Map</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
@@ -42,11 +42,14 @@
 </head>
 <body>
     <header>
-        <h1>Places I've Visited</h1>
+        <h1>🛫 Federicheddu's World Map 🛬</h1>
+        <p>I like to travel and explore new places. <br>
+            Here are some of the cities I've visited in Europe and in my trip in Japan.</p>
     </header>
     <main>
         <section>
             <h2>Interactive Map</h2>
+            <p>Click on the buttons to frame the map on Europe or Japan, or scroll down to see the places I've visited.</p>
             <div id="map"></div>
             <div class="map-buttons">
                 <button onclick="frameEurope()">Europe</button>
