update places and icon

--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
             <input type="checkbox" onclick="toggleDarkMode()">
             <span class="slider"></span>
         </label>
-        <a href="places.html" class="globe-icon">
-            <img src="media/globe.svg" alt="Globe Icon">
-        </a>
+        <a href="places.html" class="globe-icon">🗺️</a>
     </header>
     <main>
         <section>
