no more dark mode

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Federico Meloni (federicheddu)</title>
     <link rel="stylesheet" href="styles.css">
-    <script>
-        function toggleDarkMode() {
-            document.body.classList.toggle('dark-mode');
-        }
-    </script>
     <meta name="description" content="Federico Meloni's portfolio. PhD student in Computer Science specializing in computer graphics and volume maps.">
     <meta name="keywords" content="Federico Meloni, PhD, Computer Science, Computer Graphics, Volume Maps, Research, Portfolio, Unica, University, Università, Cagliari">
     <meta name="author" content="Federico Meloni">
@@ -71,10 +66,6 @@
                 </a>
             </div>
         </div>
-        <label class="switch">
-            <input type="checkbox" onclick="toggleDarkMode()">
-            <span class="slider"></span>
-        </label>
         <a href="places.html" class="globe-icon">🗺️</a>
     </header>
     <main>
@@ -83,7 +74,7 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-logo">
-                        <img src="https://web.unica.it/UserFiles/File/Utenti/verdeoro/unica_800_black.png" alt="UniCA Logo">
+                        <img src="media/unica_logo.png" alt="UniCA Logo">
                         <div class="timeline-year">2023 - Present</div>
                     </div>
                     <div class="timeline-content">
@@ -95,7 +86,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-logo">
-                        <img src="https://web.unica.it/UserFiles/File/Utenti/verdeoro/unica_800_black.png" alt="UniCA Logo">
+                        <img src="media/unica_logo.png" alt="UniCA Logo">
                         <div class="timeline-year">2020 - 2023</div>
                     </div>
                     <div class="timeline-content">
@@ -107,7 +98,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-logo">
-                        <img src="https://web.unica.it/UserFiles/File/Utenti/verdeoro/unica_800_black.png" alt="UniCA Logo">
+                        <img src="media/unica_logo.png" alt="UniCA Logo">
                         <div class="timeline-year">2017 - 2020</div>
                     </div>
                     <div class="timeline-content">
@@ -147,6 +138,7 @@
             </div>
             
         </section>
+
     </main>
     <footer>
         <p>This website was made by me with <img src="https://www.svgrepo.com/show/439915/heart-fill.svg" alt="love"> and <img src="https://simpleicons.org/icons/githubcopilot.svg" alt="Copilot"></p>
