--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                 <div>
                     <p><strong>To What Extent Are Existing Volume Mapping Algorithms Practically Useful?</strong></p>
                     <p><em>F. Meloni, G. Cherchi, R. Scateni, M. Livesu</em></p>
+                    <p>Presented at <a href="https://www.stag-conference.org/2024/"><i>Smart Tools and Applications in Graphics 2024</i></a></p>
                     <p>
                         [<a href="https://diglib.eg.org/server/api/core/bitstreams/b17146fe-0b6e-45ab-aee4-0e557161e9cd/content">Paper</a>]
                         [<a href="https://github.com/VOLMAP/volmap.github.io/tree/main/rationals_io">Code 1</a> / <a href="https://github.com/VOLMAP/volmap.github.io/tree/main/volume_mapping_check">Code 2</a>]
@@ -131,6 +132,7 @@
                 <div>
                     <p><strong>AR TutorialKit: an Augmented Reality Toolkit to Create Tutorials</strong></p>
                     <p><em>F. Meloni, A. Perniciano, G. Cerniglia, V. Frau, L.D. Spano</em></p>
+                    <p>Presented at <a href="https://cg3hci.dmi.unica.it/iseud2023/"><i>International Symposium on End-User Development 2023</i></a></p>
                     <p>
                         [<a href="https://iris.unica.it/retrieve/4d8f582f-0e3a-4356-9a48-9c9202381a67/short-s0-02_compressed.pdf">Paper</a>]
                     </p>
