--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
         <a href="places.html" class="globe-icon">🗺️</a>
     </header>
     <main>
-        <section>
-            <h2>Education</h2>
+        <div class="tabs">
+            <button class="tab-button" onclick="showSection('education')">Education</button>
+            <button class="tab-button" onclick="showSection('research')">Research</button>
+            <button class="tab-button" onclick="showSection('experience')">Experience</button>
+        </div>
+        <section id="education" class="tab-content">
+            <h2>University</h2>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-logo">
@@ -110,9 +115,8 @@
                 </div>
             </div>
         </section>
-
-        <section>
-            <h2>Research Papers</h2>
+        <section id="research" class="tab-content" style="display:none;">
+            <h2>Pubblications</h2>
             <div class="paper">
                 <img src="media/volume_mapping_comp.png" alt="Paper Thumbnail">
                 <div>
@@ -140,10 +144,50 @@
             </div>
             
         </section>
-
+        <section id="experience" class="tab-content" style="display:none;">
+            <h2>Experience</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-logo">
+                        <img src="media/unica_logo.png" alt="UniCA Logo">
+                        <div class="timeline-year">A.Y. 2022-23<br>A.Y. 2023-24<br>A.Y. 2024-25</div>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Programming 1 - Lab. Tutor</h3>
+                        <p><strong>Course:</strong> Bachelor Degree in Computer Science, University of Cagliari</p>
+                        <p>
+                            As a tutor for the Programming 1 course, I assisted students in understanding fundamental programming concepts,
+                            provided guidance on assignments, and helped them develop problem-solving skills. The course was based on the C language and, more in general, imperative procedural programming.
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-logo">
+                        <img src="media/unica_logo.png" alt="UniCA Logo">
+                        <div class="timeline-year">A.Y. 2022-23</div>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>VideoGame Design - Lab. Tutor</h3>
+                        <p><strong>Course:</strong> Bachelor Degree in Computer Science, University of Cagliari</p>
+                        <p>
+                            In my role as a tutor for the VideoGame Design course, I supported students in learning game design and developmet principles,
+                            and offered feedback on their projects. The course was based on the Unity Engine on a very basic level.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <p>This website was made by me with <img src="https://www.svgrepo.com/show/439915/heart-fill.svg" alt="love"> and <img src="https://simpleicons.org/icons/githubcopilot.svg" alt="Copilot"></p>
     </footer>
+    <script>
+        function showSection(sectionId) {
+            const sections = document.querySelectorAll('.tab-content');
+            sections.forEach(section => {
+                section.style.display = section.id === sectionId ? 'block' : 'none';
+            });
+        }
+    </script>
 </body>
 </html>
