--- a/index.html
+++ b/index.html
@@ -66,7 +66,18 @@
                 </a>
             </div>
         </div>
-        <a href="places.html" class="globe-icon">🗺️</a>
+        <div class="header-row">
+            <div class="header-cluster">
+                <div class="header-cluster-title">Hobby</div>
+                <div class="header-cluster-line"></div>
+                <a href="https://open.spotify.com/user/federicheddu98">
+                    <img src="https://img.shields.io/badge/Travel%20Map-0099cc?style=flat&logo=openstreetmap&logoColor=white" alt="Travel Map">
+                </a>
+                <a href="music.html">
+                    <img src="https://img.shields.io/badge/Playslits-cc3333?style=flat&logo=applemusic&logoColor=white" alt="Playlists">
+                </a>
+            </div>
+        </div>
     </header>
     <main>
         <div class="tabs">
