--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="header-cluster">
                 <div class="header-cluster-title">Hobby</div>
                 <div class="header-cluster-line"></div>
-                <a href="https://open.spotify.com/user/federicheddu98">
+                <a href="places.html">
                     <img src="https://img.shields.io/badge/Travel%20Map-0099cc?style=flat&logo=openstreetmap&logoColor=white" alt="Travel Map">
                 </a>
                 <a href="music.html">
