Update playlists UI and map view, add vinyl assets
Renamed 'Music' to 'Playlists' across navigation and updated playlist display to use unique vinyl images. Added new vinyl and playlist cover assets. Improved map initialization and region fit logic in places.js for better world and Europe views. Minor CSS tweaks for responsive design and playlist info display.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h3>PhD Student in Computer Science</h3>
                 <nav>
                     <a href="index.html" class="active">Home</a>
-                    <a href="music.html">Music</a>
+                    <a href="music.html">Playlists</a>
                     <a href="places.html">Travel</a>
                     <a href="photo.html">Photos</a>
                 </nav>
