--- a/photo.html
+++ b/photo.html
@@ -14,11 +14,13 @@
             <img src="media/profile_pic.jpg" alt="Profile Picture" class="profile-pic">
             <div>
                 <h1>Federico Meloni</h1>
+                <!--
                 <div class="nickname-subtitle"><em>federicheddu</em></div>
-                <h2>PhD Student in Computer Science</h2>
+                -->
+                <h3>PhD Student in Computer Science</h3>
                 <nav>
                     <a href="index.html">Home</a>
-                    <a href="music.html">Music</a>
+                    <a href="music.html">Playlists</a>
                     <a href="places.html">Travel</a>
                     <a href="photo.html" class="active">Photos</a>
                 </nav>
