Add experiences section and improve publication titles
Introduced a new 'Experiences' section to index.html, detailing professional and teaching roles, and added the FDM logo image. Publication titles are now split into mobile and desktop versions for better responsiveness, with corresponding CSS rules added to styles.css.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
             <br>
             <ul>
                 <li>
+                  <strong class="publication-title-mobile">To What Extent Are Existing Volume Mapping Algorithms Practically Useful?</strong>
                   <div class="publication-row">
                     <img class="publication-thumb" src="media/teasers/volume_mapping_comp.png" alt="Volume Mapping Paper Teaser">
                     <div class="publication-main">
-                      <strong>To What Extent Are Existing Volume Mapping Algorithms Practically Useful?</strong>
+                      <strong class="publication-title">To What Extent Are Existing Volume Mapping Algorithms Practically Useful?</strong>
                       <div class="publication-cite">
                         <div class="publication-cite-line"></div>
                         <div class="publication-cite-content">
@@ -52,10 +53,11 @@
                   </div>
                 </li>
                 <li>
+                  <strong class="publication-title-mobile">AR TutorialKit: an Augmented Reality Toolkit to Create Tutorials</strong>
                   <div class="publication-row">
                     <img class="publication-thumb" src="media/teasers/tutorialkit.png" alt="AR TutorialKit Teaser">
                     <div class="publication-main">
-                      <strong>AR TutorialKit: an Augmented Reality Toolkit to Create Tutorials</strong>
+                      <strong class="publication-title">AR TutorialKit: an Augmented Reality Toolkit to Create Tutorials</strong>
                       <div class="publication-cite">
                         <div class="publication-cite-line"></div>
                         <div class="publication-cite-content">
@@ -76,10 +78,11 @@
             <br>
             <ul>
                 <li>
+                  <strong class="publication-title-mobile">Cinolib</strong>
                   <div class="publication-row">
                     <img class="publication-thumb" src="media/teasers/cinolib_rep_image.png" alt="Cinolib Teaser">
                     <div class="publication-main">
-                      <strong>Cinolib</strong>
+                      <strong class="publication-title">Cinolib</strong>
                       <div class="publication-cite">
                         <div class="publication-cite-line"></div>
                         <div class="publication-cite-content">
@@ -91,10 +94,11 @@
                   </div>
                 </li>
                 <li>
+                  <strong class="publication-title-mobile">VOLMAP</strong>
                   <div class="publication-row">
                     <img class="publication-thumb" src="media/teasers/volmap.png" alt="VOLMAP Teaser">
                     <div class="publication-main">
-                      <strong>VOLMAP</strong>
+                      <strong class="publication-title">VOLMAP</strong>
                       <div class="publication-cite">
                         <div class="publication-cite-line"></div>
                         <div class="publication-cite-content">
@@ -162,15 +166,75 @@
                     <div class="resume-content-col">
                       <div><strong>BSc Computer Science</strong></div>
                       <div class="university">🏛️ University of Cagliari, Italy</div>
-                    <div class="university">📜 <a href="https://github.com/federicheddu/federicheddu/blob/main/Tesi_Triennale_Federico_Meloni.pdf"><i>Implementing Topological Sheet Operators in Hexahedral Meshes for the Cinolib Library</i></a></div>
+                      <div class="university">📜 <a href="https://github.com/federicheddu/federicheddu/blob/main/Tesi_Triennale_Federico_Meloni.pdf"><i>Implementing Topological Sheet Operators in Hexahedral Meshes for the Cinolib Library</i></a></div>
                       <div class="university">📅 October 2017 – September 2020</div>
                     </div>
                   </div>
                 </li>
-                <!-- Add more resume items here -->
             </ul>
         </section>
+
+        <section class="experiences">
+            <h2>Experiences</h2>
+            <p>Here are some of my professional and teaching experiences:</p>
+            <br>
+            <ul>
+                <li>
+                  <div class="resume-entry">
+                    <div class="resume-logo-col">
+                      <img src="media/unica_logo.png" alt="UniCa Logo" class="unica-logo">
+                    </div>
+                    <div class="resume-content-col">
+                      <div><strong>Research Fellow</strong></div>
+                      <div class="university">👨🏻‍💻 Project "RAPPRESENTAZIONE DI DATI AMBIENTALI INDOOR E OUTDOOR TRAMITE TECNICHE DI COMPUTER GRAPHICS E INFORMATION VISUALIZATION" within the TDM project</div>
+                      <div class="university">🏛️ CG3HCI Lab., University of Cagliari, Italy</div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="resume-entry">
+                    <div class="resume-logo-col">
+                      <img src="media/unica_logo.png" alt="UniCa Logo" class="unica-logo">
+                    </div>
+                    <div class="resume-content-col">
+                      <div><strong>Teaching Assistant - Programming 1</strong></div>
+                      <div class="university">👨🏻‍💻 Imperative procedural programming and the C language (lessons and exercises)</div>
+                      <div class="university">🏛️ Bachelor Degree in Computer Science, University of Cagliari, Italy</div>
+                      <div class="university">📅 A.Y. 2022-23, 2023-24, 2024-25</div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="resume-entry">
+                    <div class="resume-logo-col">
+                      <img src="media/unica_logo.png" alt="UniCa Logo" class="unica-logo">
+                    </div>
+                    <div class="resume-content-col">
+                      <div><strong>Teaching Assistant - VideoGame Design</strong></div>
+                      <div class="university">👨🏻‍💻 Basic concepts of videogame design and development with Unity Engine (lessons and exercises)</div>
+                      <div class="university">🏛️ Bachelor Degree in Computer Science, University of Cagliari, Italy</div>
+                      <div class="university">📅 A.Y. 2022-23</div>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="resume-entry">
+                    <div class="resume-logo-col">
+                      <img src="media/fdm_logo.png" alt="FDM Logo" class="unica-logo">
+                    </div>
+                    <div class="resume-content-col">
+                      <div><strong>Educator in High Schools for the Coding Girls and Ital-IA Lab. projects</strong></div>
+                      <div class="university">👨🏻‍💻 Design of application prototupes, HCI concepts, introduction to AI and generative AI</div>
+                      <div class="university">🏛️ Various High Schools in Cagliari - on behalf of Fondazione Mondo Digitale</div>
+                      <div class="university">📅 A.Y. 2022-23, 2023-24, 2024-25</div>
+                    </div>
+                  </div>
+                </li>
+            </ul>
+        </section>
+
         <a href="https://github.com/federicheddu/federicheddu/blob/main/CV_FedericoMeloni.pdf" class="btn">Download CV</a>
+
     </main>
     <footer>
         <div class="container">
