Update photo gallery with new images and UI tweaks
Replaced placeholder photo URLs with local images and updated captions in photo.js. Added new photo files to the media/photos directory. Improved photo.css for better mobile responsiveness and adjusted caption font size. Updated photo.html and places.html headers to indicate beta status, and added margin to h3 in places.css.

--- a/places.html
+++ b/places.html
@@ -30,7 +30,7 @@
         </div>
     </header>
     <main class="container">
-        <h3>Travel Map</h3>
+        <h3>Travel Map<br>-- Beta version --</h3>
         <div id="map" class="travel-map"></div>
         <div class="map-buttons">
             <button id="btn-europe" type="button">Europe</button>
