--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                     <div class="resume-content-col">
                       <div><strong>Research Fellow</strong></div>
                       <div class="university">👨🏻‍💻 Project "RAPPRESENTAZIONE DI DATI AMBIENTALI INDOOR E OUTDOOR TRAMITE TECNICHE DI COMPUTER GRAPHICS E INFORMATION VISUALIZATION" within the TDM project</div>
+                      <div class="university">📅 March 2020 - August 2020</div>
                       <div class="university">🏛️ CG3HCI Lab., University of Cagliari, Italy</div>
                     </div>
                   </div>
