Add Italy map button and update Oceania region
Introduced a new 'Italy' button to the travel map UI and implemented its map bounds logic. Replaced the 'Australia' button with 'Oceania', expanding the region to include Vanuatu and updated the corresponding map logic. Also added Port Vila, Vanuatu to the places array.

--- a/places.html
+++ b/places.html
@@ -33,9 +33,10 @@
         <h3>Travel Map<br>-- Beta version --</h3>
         <div id="map" class="travel-map"></div>
         <div class="map-buttons">
+            <button id="btn-italy" type="button">Italy</button>
             <button id="btn-europe" type="button">Europe</button>
             <button id="btn-japan" type="button">Japan</button>
-            <button id="btn-australia" type="button">Australia</button>
+            <button id="btn-oceania" type="button">Oceania</button>
             <button id="btn-world" type="button">World</button>
         </div>
         <div class="places-cards">
