--- a/places.html
+++ b/places.html
@@ -30,7 +30,8 @@
         </div>
     </header>
     <main class="container">
-        <h3>Travel Map<br>-- Beta version --</h3>
+        <div id="travel-stats" class="travel-stats"></div>
+        <div id="travel-flags" class="travel-flags"></div>
         <div id="map" class="travel-map"></div>
         <div class="map-buttons">
             <button id="btn-italy" type="button">Italy</button>
