Update map button labels with emojis
Replaces the text labels on map selection buttons with relevant emojis to improve visual clarity and user experience.

--- a/places.html
+++ b/places.html
@@ -35,11 +35,11 @@
         <div id="travel-flags" class="travel-flags"></div>
         <div id="map" class="travel-map"></div>
         <div class="map-buttons">
-            <button id="btn-italy" type="button">Italy</button>
-            <button id="btn-europe" type="button">Europe</button>
-            <button id="btn-japan" type="button">Japan</button>
-            <button id="btn-oceania" type="button">Oceania</button>
-            <button id="btn-world" type="button">World</button>
+            <button id="btn-italy" type="button">📍🇮🇹</button>
+            <button id="btn-europe" type="button">📍🌍</button>
+            <button id="btn-japan" type="button">📍🗾</button>
+            <button id="btn-oceania" type="button">📍🌏</button>
+            <button id="btn-world" type="button">📍🗺️</button>
         </div>
     </main>
     <footer>
